Backend optimization: Fix security leak, N+1 in placeOrder, JWT filter, pagination, error handling, .toList(), dead code cleanup