@@ -21,7 +21,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -38,7 +37,8 @@ public class ProductServiceImpl implements ProductService {
     @Transactional
     @CacheEvict(value = {"products", "productById"}, allEntries = true)
     public Response createProduct(Long categoryId, MultipartFile image, String name, String description, BigDecimal price) {
-        Category category = categoryRepo.findById(categoryId).orElseThrow(()-> new NotFoundException("Category not found"));
+        Category category = categoryRepo.findById(categoryId)
+                .orElseThrow(() -> new NotFoundException("Category not found"));
         String productImageUrl = localFileStorageService.saveImageToLocal(image);
 
         Product product = new Product();
@@ -59,15 +59,17 @@ public class ProductServiceImpl implements ProductService {
     @Transactional
     @CacheEvict(value = {"products", "productById"}, allEntries = true)
     public Response updateProduct(Long productId, Long categoryId, MultipartFile image, String name, String description, BigDecimal price) {
-        Product product = productRepo.findById(productId).orElseThrow(()-> new NotFoundException("Product Not Found"));
+        Product product = productRepo.findById(productId)
+                .orElseThrow(() -> new NotFoundException("Product Not Found"));
 
         Category category = null;
         String productImageUrl = null;
 
-        if(categoryId != null ){
-            category = categoryRepo.findById(categoryId).orElseThrow(()-> new NotFoundException("Category not found"));
+        if (categoryId != null) {
+            category = categoryRepo.findById(categoryId)
+                    .orElseThrow(() -> new NotFoundException("Category not found"));
         }
-        if (image != null && !image.isEmpty()){
+        if (image != null && !image.isEmpty()) {
             productImageUrl = localFileStorageService.saveImageToLocal(image);
         }
 
@@ -82,14 +84,14 @@ public class ProductServiceImpl implements ProductService {
                 .status(200)
                 .message("Product updated successfully")
                 .build();
-
     }
 
     @Override
     @Transactional
     @CacheEvict(value = {"products", "productById"}, allEntries = true)
     public Response deleteProduct(Long productId) {
-        Product product = productRepo.findById(productId).orElseThrow(()-> new NotFoundException("Product Not Found"));
+        Product product = productRepo.findById(productId)
+                .orElseThrow(() -> new NotFoundException("Product Not Found"));
         productRepo.delete(product);
 
         return Response.builder()
@@ -102,7 +104,8 @@ public class ProductServiceImpl implements ProductService {
     @Transactional(readOnly = true)
     @Cacheable(value = "productById", key = "#productId")
     public Response getProductById(Long productId) {
-        Product product = productRepo.findById(productId).orElseThrow(()-> new NotFoundException("Product Not Found"));
+        Product product = productRepo.findById(productId)
+                .orElseThrow(() -> new NotFoundException("Product Not Found"));
         ProductDto productDto = entityDtoMapper.mapProductToDtoBasic(product);
 
         return Response.builder()
@@ -115,34 +118,31 @@ public class ProductServiceImpl implements ProductService {
     @Transactional(readOnly = true)
     @Cacheable(value = "products")
     public Response getAllProducts() {
-        List<ProductDto> productList = productRepo.findAll(Sort.by(Sort.Direction.DESC, "id"))
-                .stream()
+        List<ProductDto> productList = productRepo.findAll(Sort.by(Sort.Direction.DESC, "id")).stream()
                 .map(entityDtoMapper::mapProductToDtoBasic)
-                .collect(Collectors.toList());
+                .toList();
 
         return Response.builder()
                 .status(200)
                 .productList(productList)
                 .build();
-
     }
 
     @Override
     @Transactional(readOnly = true)
     public Response getProductsByCategory(Long categoryId) {
         List<Product> products = productRepo.findByCategoryId(categoryId);
-        if(products.isEmpty()){
+        if (products.isEmpty()) {
             throw new NotFoundException("No Products found for this category");
         }
         List<ProductDto> productDtoList = products.stream()
                 .map(entityDtoMapper::mapProductToDtoBasic)
-                .collect(Collectors.toList());
+                .toList();
 
         return Response.builder()
                 .status(200)
                 .productList(productDtoList)
                 .build();
-
     }
 
     @Override
@@ -150,18 +150,16 @@ public class ProductServiceImpl implements ProductService {
     public Response searchProduct(String searchValue) {
         List<Product> products = productRepo.findByNameContainingOrDescriptionContaining(searchValue, searchValue);
 
-        if (products.isEmpty()){
+        if (products.isEmpty()) {
             throw new NotFoundException("No Products Found");
         }
         List<ProductDto> productDtoList = products.stream()
                 .map(entityDtoMapper::mapProductToDtoBasic)
-                .collect(Collectors.toList());
-
+                .toList();
 
         return Response.builder()
                 .status(200)
                 .productList(productDtoList)
                 .build();
     }
-
 }
